--- a/productos.html
+++ b/productos.html
@@ -9,11 +9,13 @@
     <body>
         <header>
             <h1><img src="imagenes/logo.png"></h1>
-            <ul>
-                <li>Home</li>
-                <li>Productos</li>
-                <li>Contacto</li>
+            <nav>
+            <ul class="navegacion">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="">Contacto</a></li>
             </ul>
+        </nav>
         </header>
 
     </body>
