--- a/productos.html
+++ b/productos.html
@@ -4,18 +4,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Productos - Barbería Alura</title>
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="productos.css">
     </head>
     <body>
         <header>
             <h1><img src="imagenes/logo.png"></h1>
             <nav>
-            <ul class="navegacion">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="">Contacto</a></li>
-            </ul>
-        </nav>
+                <ul class="navegacion">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="">Contacto</a></li>
+                </ul>
+            </nav>
         </header>
 
     </body>
