--- a/productos.html
+++ b/productos.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Productos - Barbería Alura</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="productos.css">
-    </head>
-    <body>
-        <header>
-            <h1><img src="imagenes/logo.png"></h1>
-            <nav>
-                <ul class="navegacion">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
-
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Productos - Barbería Alura</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="productos.css" />
+  </head>
+  <body>
+    <header>
+      <div class="caja">
+        <h1><img src="imagenes/logo.png" /></h1>
+        <nav>
+          <ul class="navegacion">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="">Contacto</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div >
+        <main class="tabla">
+            <ul>
+            <li><h1>cabello</h1><img src="/imagenes/cabello.jpg" ><p>con tijeras o maquina, al gusto del cliente</p><p>$10.00</p></li>
+            <li><h1>barba</h1><img src="/imagenes/barba.jpg" ><p>con tijeras o maquina, al gusto del cliente</p><p>$8.00</p></li>
+            <li><h1>cabello + barba</h1> <img src="/imagenes/cabello+barba.jpg"><p>con tijeras o maquina, al gusto del cliente</p><p>$15.00</p></li>
+            </ul>
+        </main>
+    </div>
+  </body>
 </html>
