arreglando la identacion

--- a/productos.html
+++ b/productos.html
@@ -20,14 +20,29 @@
         </nav>
       </div>
     </header>
-    <div >
-        <main class="tabla">
-            <ul>
-            <li><h1>cabello</h1><img src="/imagenes/cabello.jpg" ><p>con tijeras o maquina, al gusto del cliente</p><p>$10.00</p></li>
-            <li><h1>barba</h1><img src="/imagenes/barba.jpg" ><p>con tijeras o maquina, al gusto del cliente</p><p>$8.00</p></li>
-            <li><h1>cabello + barba</h1> <img src="/imagenes/cabello+barba.jpg"><p>con tijeras o maquina, al gusto del cliente</p><p>$15.00</p></li>
-            </ul>
-        </main>
+    <div>
+      <main class="tabla">
+        <ul>
+          <li>
+            <h2>cabello</h2>
+            <img src="/imagenes/cabello.jpg" />
+            <p>con tijeras o maquina, al gusto del cliente</p>
+            <p>$10.00</p>
+          </li>
+          <li>
+            <h2>barba</h2>
+            <img src="/imagenes/barba.jpg" />
+            <p>con tijeras o maquina, al gusto del cliente</p>
+            <p>$8.00</p>
+          </li>
+          <li>
+            <h2>cabello + barba</h2>
+            <img src="/imagenes/cabello+barba.jpg" />
+            <p>con tijeras o maquina, al gusto del cliente</p>
+            <p>$15.00</p>
+          </li>
+        </ul>
+      </main>
     </div>
   </body>
 </html>
