--- a/productos.html
+++ b/productos.html
@@ -32,13 +32,13 @@
           <li>
             <h2>barba</h2>
             <img src="/imagenes/barba.jpg" />
-            <p>con tijeras o maquina, al gusto del cliente</p>
+            <p>corte y diseño profesional de barba</p>
             <p>$8.00</p>
           </li>
           <li>
             <h2>cabello + barba</h2>
             <img src="/imagenes/cabello+barba.jpg" />
-            <p>con tijeras o maquina, al gusto del cliente</p>
+            <p>paquete completo de cabello y barba</p>
             <p>$15.00</p>
           </li>
         </ul>
