--- a/productos.html
+++ b/productos.html
@@ -20,26 +20,26 @@
         </nav>
       </div>
     </header>
-    <div>
-      <main class="tabla">
-        <ul>
+    <div class="">
+      <main>
+        <ul class="productos">
           <li>
             <h2>cabello</h2>
             <img src="/imagenes/cabello.jpg" />
-            <p>con tijeras o maquina, al gusto del cliente</p>
-            <p>$10.00</p>
+            <p class="producto-descripcion">con tijeras o maquina, al gusto del cliente</p>
+            <p class="producto-precio">$10.00</p>
           </li>
           <li>
             <h2>barba</h2>
             <img src="/imagenes/barba.jpg" />
-            <p>corte y diseño profesional de barba</p>
-            <p>$8.00</p>
+            <p class="producto-descripcion">corte y diseño profesional de barba</p>
+            <p class="producto-precio">$8.00</p>
           </li>
           <li>
             <h2>cabello + barba</h2>
             <img src="/imagenes/cabello+barba.jpg" />
-            <p>paquete completo de cabello y barba</p>
-            <p>$15.00</p>
+            <p class="producto-descripcion">paquete completo de cabello y barba</p>
+            <p class="producto-precio">$15.00</p>
           </li>
         </ul>
       </main>
